# spatialite

./: .gitignore  CMakeLists.txt  README.md  config-msvc.h  config.h  spatialite.pro
src/gaiaaux/: gg_utf8.c
src/gaiageo/: gg_advanced.c  gg_extras.c
src/headers/spatialite/: gaiageo.h  gg_advanced.h
src/spatialite/: spatialite.c
